[package]
name = "clovers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
maud = { version = "0.25.0", features = ["axum"] }
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "macros", "sqlx-sqlite"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
